--- a/client/src/pages/SoundManager/components/CollectionItemsDisplay/CollectionItemsDisplay.css
+++ b/client/src/pages/SoundManager/components/CollectionItemsDisplay/CollectionItemsDisplay.css
@@ -1,7 +1,9 @@
 .collection-items-display {
     width: 100%;
+    height: 100%;
     min-width: 300px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .collection-items-display-header {
