--- a/client/src/pages/SoundManager/components/CollectionItemsDisplay/components/GridView.css
+++ b/client/src/pages/SoundManager/components/CollectionItemsDisplay/components/GridView.css
@@ -1,30 +1,12 @@
 .audio-item-grid {
-    display: grid;
-    grid-auto-columns: 200px;
-    grid-auto-flow: column;
-    gap: 50px;
-    width: 100%;
-    margin: 0 auto;
-    padding-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-
-}
-
-.audio-item {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.audio-item-header {
-    display: flex;
+    
     align-items: center;
-    margin-bottom: 0.75rem;
-}
+    align-content: center;
+    height: 100%;
 
-.audio-item-header .item-icon {
-    margin-right: 0.5rem;
-    font-size: 1.1rem;
 }
 
 .audio-item-name {
@@ -52,7 +34,8 @@
 }
 
 .grid-insert-marker {
-    grid-column: 1 / -1; /* Span all columns */
+    grid-column: 1 / -1;
+    /* Span all columns */
     width: 100%;
     z-index: 5;
     margin: 1rem 0;
