--- a/client/src/pages/SoundManager/components/PlaylistPanel/PlaylistPanel.css
+++ b/client/src/pages/SoundManager/components/PlaylistPanel/PlaylistPanel.css
@@ -18,6 +18,8 @@
 .playlist-panel .collection-items-display {
   flex: 1 1 auto;
   min-height: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .playlist-panel .audio-item-table{
