--- a/client/src/pages/SoundManager/components/CollectionItemsDisplay/components/GridView.css
+++ b/client/src/pages/SoundManager/components/CollectionItemsDisplay/components/GridView.css
@@ -2,18 +2,17 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
     align-items: center;
     align-content: center;
     height: 100%;
-
 }
 
 .audio-item-name {
     margin: 0;
-    font-size: 1rem;
+    padding-top: 0.25rem;
+    font-size: 0.9rem;
     font-weight: 500;
-    max-width: 130px;
+    max-width: 150px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -26,11 +25,6 @@
     font-size: 0.75rem;
     margin-bottom: 0.5rem;
     flex-grow: 1;
-}
-
-.audio-item-card .audio-item-controls {
-    display: flex;
-    justify-content: flex-end;
 }
 
 .grid-insert-marker {
