--- a/client/src/pages/SoundManager/components/CollectionView/CollectionView.css
+++ b/client/src/pages/SoundManager/components/CollectionView/CollectionView.css
@@ -2,3 +2,10 @@
   width: 100%;
   height: 100%;
 }
+
+.collections-grid-view {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding: 0rem 0rem 0rem 1rem;
+}
