--- a/client/src/pages/SoundManager/components/SoundCollectionsPanel/SoundCollectionsPanel.css
+++ b/client/src/pages/SoundManager/components/SoundCollectionsPanel/SoundCollectionsPanel.css
@@ -1,4 +1,4 @@
-.sound-manager-live-view {
+.SoundCollectionsPanel {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -24,7 +24,7 @@
   align-items: center;
   border-top: 1px solid var(--border-color-light);
   border-bottom: 1px solid var(--border-color-light);
-  z-index: 10;
+  z-index: 20;
 }
 
 .separator-handle:hover {
@@ -56,7 +56,7 @@
   justify-content: center;
   color: var(--text-secondary);
   transition: transform 0.3s ease;
-  z-index: 11;
+  z-index: 25;
 }
 
 .collapse-btn:hover {
