--- a/client/src/pages/SoundManager/components/CollectionItemsDisplay/components/AudioItemCard/AudioItemCard.css
+++ b/client/src/pages/SoundManager/components/CollectionItemsDisplay/components/AudioItemCard/AudioItemCard.css
@@ -15,6 +15,8 @@
   max-width: 200px;
   padding: 0.25rem 0.625rem 0.625rem 0.625rem;
   place-self: center;
+  position: relative;
+  overflow: hidden;
 
   /* Default type color */
   --type-color: var(--accent-primary);
@@ -185,7 +187,6 @@
   opacity: 0.9;
 }
 .audio-item-content {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -233,13 +234,32 @@
   opacity: 0.8;
 }
 
+.sfx-progress-track {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.sfx-progress-indicator {
+  height: 100%;
+  background-color: #4a90e2;
+  border-radius: 2px;
+  transition: width 0.1s linear;
+}
+
 /* ===== Volume Controls ===== */
 .audio-item-content .volume-slider {
   position: absolute;
-  bottom: 1px;
-  left: 0px;
-  right: 0px;
-  width: 100%;
+  bottom: 12px;
+  width: 90%;
+  justify-self: center;
   height: 6px;
   margin-bottom: -1px;
 }
@@ -252,10 +272,3 @@
   font-size: 0.75rem;
   color: var(--text-secondary);
 }
-
-/* ===== Removed redundant/duplicate rules:
-   - All type-specific color rules now use --type-color.
-   - All play-icon and slider thumb color rules consolidated.
-   - Removed repeated .audio-item-card.TYPE .play-icon and .volume-slider rules.
-   - Removed unnecessary specificity and duplicate selectors.
-*/
